# quarry

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  RUNBOOK.md  alembic.ini  constraints.txt  pyproject.toml  quarry.db  seed_data.yaml
alembic/: env.py
alembic/versions/: 4596e16062f9_initial_multi_user_schema.py
docs/: ARCHITECTURE.md  CONFIGURING.md  DECISIONS.md  README.md  STATUS.md  TASKS.md  career-ops-learnings.md  multi-user-schema.md
quarry/: __init__.py  config.py  config.yaml.example  http.py  models.py  requirements.txt
quarry/agent/: __init__.py  __main__.py  scheduler.py  tools.py
quarry/crawlers/: __init__.py  ashby.py  base.py  careers_page.py  greenhouse.py  jobspy_client.py  lever.py
quarry/digest/: __init__.py  __main__.py  digest.py
quarry/pipeline/: __init__.py  (+6 more)
tests/: test_ashby_crawler.py  test_ats_detector.py  test_careers_page_crawler.py  test_careers_resolver.py  test_config.py  test_crawler_config.py  test_crawler_factory.py  test_crawlers_base.py  test_db.py  test_digest.py  test_domain_resolver.py  test_e2e.py  test_greenhouse_crawler.py  test_http.py  test_jobspy_client.py  test_jobspy_integration.py  test_lever_crawler.py  test_m4_integration.py  test_models.py  test_models_location.py  test_orm.py  test_pipeline_dedup.py  test_pipeline_embedder.py  test_pipeline_extract.py  test_pipeline_filter.py  test_pipeline_integration.py  test_pipeline_locations.py  test_pipeline_search.py  test_resolve_e2e.py  test_resolve_pipeline.py  test_retry_infrastructure.py  test_scheduler.py  test_seed.py  test_store_cli.py  test_ui.py
(+49 files in other folders)
